add explore view and styling and reset.css

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,8 @@
 
         <!-- build:css({.tmp,app}) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
+        <link rel="stylesheet" href="styles/explore.css">
+        <link rel="stylesheet" href="styles/reset.css">
         <!-- endbuild -->
 </head>
   <body ng-app="sgmobileApp">
