--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/explore.js"></script>
+        <script src="scripts/services/seatgeek.js"></script>
         <!-- endbuild -->
 </body>
 </html>
