--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" ng-app="sgmobileApp"> <!--<![endif]-->
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,18 +12,35 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <!-- build:css({.tmp,app}) styles/main.css -->
-        <link rel="stylesheet" href="styles/main.css">
-        <link rel="stylesheet" href="styles/explore.css">
-        <link rel="stylesheet" href="styles/reset.css">
+        <link rel="stylesheet" href="styles/lib/main.css">
+        <link rel="stylesheet" href="styles/lib/explore.css">
+        <link rel="stylesheet" href="styles/lib/reset.css">
         <!-- endbuild -->
 </head>
-  <body ng-app="sgmobileApp">
+  <body>
     <header class="sg-header">
-
+      Explore
     </header>
 
     <!-- Add your site or application content here -->
     <div class="container" ng-view=""></div>
+    <footer class="sg-footer">
+      <div class="footer-icon selected">
+        <div class="icon explore-icon"></div>
+      </div>
+      <div class="footer-icon">
+        <div class="icon search-icon"></div>
+      </div>
+      <div class="footer-icon">
+        <div class="icon profile-icon"></div>
+      </div>
+      <div class="footer-icon">
+        <div class="icon performers-icon"></div>
+      </div>
+      <div class="footer-icon">
+        <div class="icon settings-icon"></div>
+      </div>
+    </footer>
 
     <script src="bower_components/angular/angular.js"></script>
 
