--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
         <div class="icon search-icon"></div>
       </div>
       <div class="footer-icon">
-        <div class="icon profile-icon"></div>
+        <div class="icon events-icon"></div>
       </div>
       <div class="footer-icon">
         <div class="icon performers-icon"></div>
@@ -56,6 +56,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/explore.js"></script>
         <script src="scripts/services/seatgeek.js"></script>
+        <script src="scripts/controllers/search.js"></script>
         <!-- endbuild -->
 </body>
 </html>
