--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="styles/lib/reset.css">
         <link rel="stylesheet" href="styles/lib/main.css">
         <link rel="stylesheet" href="styles/lib/explore.css">
+        <link rel="stylesheet" href="styles/lib/search.css">
         <!-- endbuild -->
 </head>
   <body>
@@ -53,6 +54,7 @@
         <script src="scripts/controllers/explore.js"></script>
         <script src="scripts/services/seatgeek.js"></script>
         <script src="scripts/controllers/search.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <!-- endbuild -->
 </body>
 </html>
