--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="styles/lib/main.css">
         <link rel="stylesheet" href="styles/lib/explore.css">
         <link rel="stylesheet" href="styles/lib/search.css">
+        <link rel="stylesheet" href="styles/lib/performer.css">
         <!-- endbuild -->
 </head>
   <body>
@@ -57,6 +58,7 @@
         <script src="scripts/services/seatgeek.js"></script>
         <script src="scripts/controllers/search.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="scripts/controllers/performer.js"></script>
         <!-- endbuild -->
 </body>
 </html>
