--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
         <!-- build:css({.tmp,app}) styles/main.css -->
         <link rel="stylesheet" href="styles/lib/reset.css">
         <link rel="stylesheet" href="styles/lib/main.css">
+        <link rel="stylesheet" href="styles/lib/leaflet.css">
         <link rel="stylesheet" href="styles/lib/explore.css">
         <link rel="stylesheet" href="styles/lib/search.css">
         <link rel="stylesheet" href="styles/lib/performer.css">
@@ -49,16 +50,21 @@
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
         <script src="bower_components/angular-route/angular-route.js"></script>
         <script src="bower_components/angular-animate/angular-animate.js"></script>
+        <script src="bower_components/jquery/dist/jquery.js"></script>
+        <script src="bower_components/lodash/dist/lodash.underscore.js"></script>
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/bundle_maps_js.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/explore.js"></script>
         <script src="scripts/services/seatgeek.js"></script>
         <script src="scripts/controllers/search.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="scripts/controllers/performer.js"></script>
+        <script src="scripts/controllers/event.js"></script>
+        <script src="scripts/controllers/map.js"></script>
         <!-- endbuild -->
 </body>
 </html>
