--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,6 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
         <!-- build:css({.tmp,app}) styles/main.css -->
         <link rel="stylesheet" href="styles/lib/reset.css">
         <link rel="stylesheet" href="styles/lib/main.css">
@@ -18,6 +17,7 @@
         <link rel="stylesheet" href="styles/lib/explore.css">
         <link rel="stylesheet" href="styles/lib/search.css">
         <link rel="stylesheet" href="styles/lib/performer.css">
+        <link rel="stylesheet" href="styles/lib/map.css">
         <!-- endbuild -->
 </head>
   <body>
