Style my performers tab

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,8 @@
         <link rel="stylesheet" href="styles/lib/search.css">
         <link rel="stylesheet" href="styles/lib/performer.css">
         <link rel="stylesheet" href="styles/lib/map.css">
-         <link rel="stylesheet" href="styles/lib/myevents.css">
+        <link rel="stylesheet" href="styles/lib/myevents.css">
+        <link rel="stylesheet" href="styles/lib/myperformers.css">
         <!-- endbuild -->
 </head>
   <body>
@@ -41,7 +42,7 @@
           <div class="icon events-icon"></div>
         </div>
       </a>
-      <a class="footer-icon" href="#/myevents">
+      <a class="footer-icon" href="#/myperformers">
         <div>
           <div class="icon performers-icon"></div>
         </div>
@@ -77,6 +78,7 @@
         <script src="scripts/controllers/event.js"></script>
         <script src="scripts/controllers/map.js"></script>
         <script src="scripts/controllers/myEvents.js"></script>
+        <script src="scripts/controllers/myPerformers.js"></script>
         <!-- endbuild -->
 </body>
 </html>
